# covid19_MD

./: .travis.yml  <bound method CovidPull.output of CovidPull(force=False)>  Dockerfile  LICENSE  Procfile  Procfile.txt  README.md  analysis.ipynb  app.py  clean.sh  dashboard.py  environment.yml  heroku.yml  pyproject.toml  requirements.txt  test.ipynb  update.py  update_today.py  update_today.sh
.circleci/: config.yml
.github/workflows/: CI.yml  cancel.yml  docker.yml  miniconda_CI.yml  poetry_CI.yml
data/: 2020-04-12.csv  2020-04-12.tsv  2020-04-13.csv  2020-04-13.tsv  2020-04-14.csv  2020-04-14.tsv  2020-04-15.csv  2020-04-15.tsv  2020-04-16.csv  2020-04-16.tsv  2020-04-17.csv  2020-04-17.tsv  2020-04-18.csv  2020-04-18.tsv  2020-04-19.csv  2020-04-19.tsv  2020-04-20.csv  2020-04-20.tsv  2020-04-21.csv  2020-04-21.tsv  2020-04-22.csv  2020-04-22.tsv  2020-04-23.csv  2020-04-23.tsv  2020-04-24.csv  2020-04-24.tsv  2020-04-25.csv  2020-04-25.tsv  2020-04-26.csv  2020-04-26.tsv  2020-04-27.csv  2020-04-27.tsv  2020-04-28.csv  2020-04-28.tsv  2020-04-29.csv  2020-04-29.tsv  2020-04-30.csv  2020-04-30.tsv  2020-05-01.csv  2020-05-01.tsv  (+571 more)
src/: download.py  plotting.py  update.py  utils.py
test/: test_update.py
